# adventofcode24

python/: pyproject.toml
python/src/: 01.py  02.py  03.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/days/: day01.rs  day02.rs  day03.rs
